// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TS based ESM > GIVEN no plugin options THEN injects version 1`] = `
"//#region tests/fixtures/build-in/typescript.mts
const version = "0.0.1";
//#endregion
export { version };
"
`;

exports[`TS based ESM > GIVEN versionOrCurrentDate = "current-date" THEN injects current date 1`] = `
"//#region tests/fixtures/build-in/typescript.mts
const version = "2022-02-01T14:30:30.000Z";
//#endregion
export { version };
"
`;
